--- a/system/aquila.service
+++ b/system/aquila.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=root
 WorkingDirectory=/root/aquila-backend
-ExecStart=/usr/local/bin/gunicorn -w 2 -b 0.0.0.0:5000 app:app
+ExecStart=/usr/bin/python3 app.py
 Restart=always
 
 [Install]
